...
extension ProfileCreationViewController{
    /// Validate that data is not nil or empty else show relevant message
    /// - Parameter userInfo: userInfo data
    /// - Returns: true or false
    fileprivate  func validateData(_ userInfo: UserInfo)->Bool {
        if(userInfo.name.count == 0 ){
            let title = NSLocalizedString("Empty Name", comment: "Emtpy Data")
            let message = NSLocalizedString("Name cannot be empty, please enter name.", comment: "Error")
            Utility.showAlertMessage(message, withTitle: title , self ) {
                print("empty data error ")
            }
            return false
        }
...
