...
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="i6P-JP-HBl">
                    <rect key="frame" x="32" y="44" width="350" height="233"/>
                    <subviews>
                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="YEo-vj-ifh">
                            <rect key="frame" x="10" y="0.0" width="330" height="120"/>
                            <subviews>
                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello, Firstname!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gT-pK-b7U">
                                    <rect key="frame" x="0.0" y="0.0" width="330" height="50"/>
                                    <constraints>
                                        <constraint firstAttribute="height" constant="50" id="BcD-Yz-UYN"/>
                                    </constraints>
                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
                                    <nil key="textColor"/>
...
